ecmascript/parser/tests/test262-error-references/fail/2d1410e37ecc3647.js.stderr
error: Expected RParen, got Some(AssignOp("="))
 --> $DIR/tests/test262-parser/fail/2d1410e37ecc3647.js:1:20
  |
1 | function f(a, ...b = 0)
  |                    ^

